# mcft

./: .env.example  .gitignore  Makefile  README.md  kickoff_prompt.md  pyproject.toml
analysis/: ablation_score.py  teacher_readiness.py
configs/personas/: herald.yaml  jolt.yaml  sable.yaml
docs/: analysis-2026-07-20.md  backlog.md  eras.md  eula-platform-gate.md  eval-battery-design.md  intent-graph-design.md  model-landscape-2026-07.md  persona-design.md  show-eval-v0.md  validation-landscape-2026-07.md  validation-student-2026-07.md  validation-teacher-2026-07.md
docs/decisions/: 0001-three-machine-architecture.md  0002-personas-runtime-and-persona-conditioned-data.md  0003-clean-room-data-provenance.md  0004-deliberation-policy.md  0005-audience-interaction-loop.md  0006-code-execution-and-operational-safety.md  0007-product-differentiation.md
integrations/mindcraft/: README.md  make_profiles.py  mcft_intent.js  mcft_intent.json  mcft_logger.js
integrations/mindcraft/ops/: ablation_runner.py  backup.sh  checker_integration_test.py  digest_daemon.sh  metrics_digest.py  patch_chest_open.py  patch_collect_guard.py  patch_craft_smelt.py  patch_give_craft.py  patch_goto_arrival.py  patch_intent.py  patch_logger.py  patch_loopbreaker.py  patch_loopbreaker_v2.py  patch_memguard.py  patch_pairsync.py  patch_placehere.py  patch_siteguard.py  patch_taskguard.py  rescue.py  scout_site.py  seed_intent.py  smoke_intent.mjs  soft_reset.py  swap_siteguard_v2.py  watchdog.sh  watchdog_daemon.sh
integrations/mindcraft/profiles/: herald.json  jolt.json  sable.json
src/mcft/: moderation.py
src/mcft/datagen/: README.md
src/mcft/evals/: battery.py  client.py  meters.py  runner.py
src/mcft/evals/live/: rcon.py  (+3 more)
src/mcft/intent/: __init__.py  model.py  seed.py
src/mcft/personas/: __init__.py  action_contract.txt
src/mcft/schemas/: __init__.py
tests/: conftest.py  test_battery.py  test_evals.py  test_intent.py  test_live_checkers.py  test_meters.py  test_moderation.py  test_personas.py  test_schemas.py
training/runpod/: README.md
(+2 files in other folders)
