[project]
name = "mcft"
version = "0.1.0"
description = "Steerable Minecraft performance system: personas, evals, trajectory pipeline"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcft"]
# hatchling ships non-Python files inside the package by default
# (personas/action_contract.txt, evals/tasks/battery_v0.yaml);
# never add an exclude that breaks this — test 12 guards it.

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# ops patch scripts embed verbatim JS payloads; schemas carry verbatim
# kickoff-prompt comments. Neither can honor the line limit by design.
"integrations/mindcraft/ops/patch_*.py" = ["E501"]
"integrations/mindcraft/ops/soft_reset.py" = ["E501"]
"src/mcft/schemas/__init__.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
